# startup-seminar

./: .gitignore  README.md  pyproject.toml  theme.css
images/: cross-validation.drawio  hold-out.drawio  label-encoding.drawio  onehot-encoding.drawio  random-forest.drawio  workflow.drawio
notebooks/: ml_intro.ipynb  ml_intro_answer.ipynb
slide/: seminar-slide.md  ~$seminar-slide.pptx
